# SportHub

./: .env.template  README.md  compose.yaml  docker-compose.yml
bot/: .env  .gitignore  Dockerfile  README.md  pyproject.toml  ruff.toml  template.env
bot/src/: main.py
bot/src/handlers/: __init__.py  _help.py  _start.py
bot/src/utils/: tg_auth.py
notification-service/: Dockerfile  README.md  SportHub-notification-service.sln  docker-compose.yml
notification-service/src/SportHubNotificationService/: DependencyInjection.cs  Program.cs  SportHubNotificationService.csproj  SportHubNotificationService.http  appsettings.Docker.json  appsettings.json
notification-service/src/SportHubNotificationService/Features/: SendEmailNotificationByFilter.cs  SubscribeOnEmailNotifications.cs  SubscribeOnTelegramNotifications.cs
notification-service/src/SportHubNotificationService/Infrastructure/: Migrator.cs
notification-service/src/SportHubNotificationService/Jobs/: RepeatSendingCheckPDFJob.cs  SendEmailJob.cs  SendToTelegramRequestJob.cs
notification-service/src/SportHubNotificationService/Options/: MailOptions.cs
notification-service/src/SportHubNotificationService/Response/: Response.cs
parser/: .env  .gitignore  Dockerfile  README.md  pyproject.toml  ruff.toml  template.env
parser/src/: main.py  process.py
parser/src/pdf_getter/: __init__.py  _download_file.py  _get_html_page.py  _get_pdf.py  _parse_file_url.py
parser/src/pdf_parser/: __init__.py  _event_participants.py  _pdf_file.py  _pdf_page_text.py
web/: .env  .gitignore
web/src/schemas/: index.ts
(+13 files in other folders)
